Fri Dec 19 22:30:39 GMT 2014  Olly Betts <olly@survex.com>

	* common/errno_to_string.cc: Need stdlib.h under mingw.

Fri Jan 09 04:38:03 GMT 2015  Olly Betts <olly@survex.com>

	* common/debuglog.cc: Add '#include "errno_to_string.h"'.

Wed Dec 17 02:30:14 GMT 2014  Olly Betts <olly@survex.com>

	* api/error.cc,backends/chert/chert_btreebase.cc,
	  backends/chert/chert_table.cc,backends/flint_lock.cc,
	  backends/glass/glass_table.cc,common/,configure.ac,
	  net/remoteconnection.cc: Add errno_to_string() function which is
	  thread-safe where a suitable alternative to strerror() exists.

Sat Dec 20 10:40:44 GMT 2014  Sébastien Debrard <sebastien.debrard@gmail.com>

	* Makefile.am,configure.ac,pkgconfig/,xapian-core.spec.in: Generate a
	  file for pkg-config.  (Fixes#540)

Mon Jan 05 08:39:47 GMT 2015  Olly Betts <olly@survex.com>

	* Makefile.am: Remove the generated .pc file on "make distclean".

Wed Dec 17 02:59:54 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Drop probe for gethostbyaddr() - we've not used it for
	  over 8.5 years (since e33972a5).

Tue Dec 16 06:54:32 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Add missing m4 quoting.  Generated configure file is
	  unchanged.

Mon Jan 05 01:52:54 GMT 2015  Olly Betts <olly@survex.com>

	* bin/xapian-check-brass.cc,bin/xapian-check-chert.cc: Cross-check the
	  position and postlist tables and report positional data for
	  non-existent documents.

Tue Dec 23 21:26:49 GMT 2014  Olly Betts <olly@survex.com>

	* backends/chert/chert_table.cc: More assertions about c.

Tue Dec 23 04:26:38 GMT 2014  Olly Betts <olly@survex.com>

	* backends/chert/chert_table.cc: Fix assertion to allow for c being
	  DIR_START - D2 in leaf blocks.

Tue Dec 23 04:01:54 GMT 2014  Olly Betts <olly@survex.com>

	* backends/chert/chert_table.cc: Add more assertions that c has
	  suitable values.

Tue Dec 23 03:58:00 GMT 2014  Olly Betts <olly@survex.com>
